--- a/Client/UIComponents/Components/LeftSideBar.razor
+++ b/Client/UIComponents/Components/LeftSideBar.razor
@@ -8,6 +8,7 @@
 @inject MessageNotifierService _messageNotifierService
 @inject PropertiesNotifierService _propertiesNotifierService
 @inject IToastService _toastService
+@inject SweetAlertService _swal;
 @using Microsoft.Extensions.Logging
 @using ServiceBusDriver.Client.Features.Instance
 @using ServiceBusDriver.Client.Features.Message
@@ -15,6 +16,7 @@
 @using ServiceBusDriver.Client.Features.Subscription
 @using ServiceBusDriver.Client.Features.Topic
 @using ServiceBusDriver.Client.Services
+@using CurrieTechnologies.Razor.SweetAlert2
 @inject ILogger<Index> _logger
 
 <div class="flex-grow-0 flex-shrink w-2/5 px-4 w-fixed ">
@@ -225,19 +227,19 @@ else
 <br/> <br/>
 @if (_subscriptionNameSelectBox != null || _queueNameSelectBox != null)
 {
-    <p class="text-lg leading-6 font-medium text-gray-900">Peek Messages</p>
+    <p class="text-lg leading-6 font-medium text-gray-900">Fetch Messages</p>
     <hr style="padding-bottom: 2%; margin-top: 5px;">
 
     <div class="flex">
         <div class="flex flex-col flex-grow w-5/5">
-            <label for="getActiveMessages" class="mb-2 block font-semibold text-gray-700"> Peek Active Messages</label>
+            <label for="getActiveMessages" class="mb-2 block font-semibold text-gray-700"> Fetch Active Messages</label>
             <input id="getActiveMessages" name="getActiveMessages" class="border w-full p-3" type="number" @bind-value="@_activeMsgCountInput"/>
         </div>
     </div>
     <div class="flex">
         <div class="flex flex-col flex-grow w-2/5">
 
-            <span class="inline-flex items-center bg-red-400 hover:bg-purple-600 p-3 shadow-md rounded-md text-white recieve-and-peek-button" @onclick="@ReceiveActiveMessages">
+            <span class="inline-flex items-center bg-red-400 hover:bg-purple-600 p-3 shadow-md rounded-md text-white recieve-and-peek-button" @onclick="@(() => @ReceiveAndDeleteShowConfirmAlert(false))">
                 @if (_receiveAndDeleteActiveMessageSpinner)
                 {
                     <svg class="animate-spin h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -247,7 +249,7 @@ else
                 }
                 else
                 {
-                    <span>RECEIVE</span>
+                    <span>RECEIVE & DELETE</span>
                 }
             </span>
         </div>
@@ -270,7 +272,7 @@ else
     </div>
     <div class="flex">
         <div class="flex flex-col flex-grow w-5/5">
-            <label for="getDlMessages" class="mb-2 block font-semibold text-gray-700"> Peek Dead Letter Queue</label>
+            <label for="getDlMessages" class="mb-2 block font-semibold text-gray-700"> Fetch Dead Letter Queue</label>
             <input id="getDlMessages" name="getDlMessages" class="border w-full p-3" type="number" placeholder="Enter number to fetch" @bind-value="@_deadLetterMsgCountInput"/>
 
         </div>
@@ -278,7 +280,7 @@ else
     <div class="flex">
         <div class="flex flex-col flex-grow w-2/5">
 
-            <span class="inline-flex items-center bg-red-400 hover:bg-purple-600 p-3 shadow-md rounded-md text-white recieve-and-peek-button" @onclick="@ReceiveDeadLetter">
+            <span class="inline-flex items-center bg-red-400 hover:bg-purple-600 p-3 shadow-md rounded-md text-white recieve-and-peek-button" @onclick="@(() => @ReceiveAndDeleteShowConfirmAlert(true))">
                 @if (_receiveAndDeleteDlMessageSpinner)
                 {
                     <svg class="animate-spin h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -288,7 +290,7 @@ else
                 }
                 else
                 {
-                    <span>RECEIVE</span>
+                    <span>RECEIVE & DELETE</span>
                 }
             </span>
         </div>
