--- a/Client/UIComponents/Pages/Auth/Register.razor
+++ b/Client/UIComponents/Pages/Auth/Register.razor
@@ -18,7 +18,7 @@
             </h2>
             <p class="mt-2 text-center text-sm text-gray-600">
                 And
-                <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
+                <a href="#" class="font-medium text-purple-600 hover:text-indigo-500">
                     start exploring and collaborating!
                 </a>
             </p>
@@ -46,22 +46,22 @@
 
             <div class="flex items-center justify-between">
                 <div class="text-sm">
-                    <a href="login" disabled="@(_userRegistered)" class="font-medium text-indigo-600 hover:text-indigo-500">
+                    <a href="login" disabled="@(_userRegistered)" class="font-medium text-purple-600 hover:text-indigo-500">
                         Login?
                     </a>
                 </div>
 
                 <div class="text-sm">
-                    <a href="#" disabled="@(_userRegistered)" class="font-medium text-indigo-600 hover:text-indigo-500">
+                    <a href="#" disabled="@(_userRegistered)" class="font-medium text-purple-600 hover:text-indigo-500">
                         Forgot your password?
                     </a>
                 </div>
             </div>
 
             <div>
-                <button @onclick="RegisterUser" disabled="@(_userRegistered)" type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                <button @onclick="RegisterUser" disabled="@(_userRegistered)" type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-purple-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                     <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                        <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400 h-6 w-6"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <svg class="h-5 w-5 text-indigo-500 group-hover:text-purple-400 h-6 w-6"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="white">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8" />
                         </svg>
                     </span>
@@ -77,9 +77,9 @@
                 </div>
 
                 <div>
-                    <button @onclick="VerifyOtp" type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    <button @onclick="VerifyOtp" type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-purple-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         <span class="absolute left-0 inset-y-0 flex items-center pl-3">
-                            <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <svg class="h-5 w-5 text-indigo-500 group-hover:text-purple-400 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="white">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"/>
                             </svg>
                         </span>
